# anyval

./: Cargo.toml  LICENSE  README.md
benches/: bench.rs
src/: lib.rs  string.rs
